# openCVStartProject

./: CMakeLists.txt  README.md  RGB2Grey.cpp  camera.cpp
